0.5 - Development Version
	New Features:

	owsrvcoll - Add support for moisture and wetness Hobby Boards sensors.
	
0.4 - Release Version
	Added Collectors:
		moncoll
		jsoncgicoll

	Added Tools:
		gnhastweb
		gtk-insteonedit (partially complete)

	Added Commands:
		cfeed
		setalarm
		dumpalarms
		listenalarms
		ping
		imalive
	
	New Features:

	Support for new style insteon HUBs.

	Collectors now have self-health checks, and gnhastd monitors them.  A
	collector will be flagged as bad if it doesn't send updates, or fails
	to respond to "pings".  This can help with certain devices that get
	wedged up after awhile, or collectors that die off mysteriously.

	moncoll collector is a special collector that interfaces with the
	collector devices created on the gnhast server, and when a collector
	is marked bad, it can restart the collector, forcibly if needed.

	cfeed is a new type of feed to monitor switches.  Unlike the usual
	timed feed, cfeed will notify the listeners immediately upon change.

	Add an alarm subsystem.  This is very basic.  Each alarm has a
	user-generated uid, a blob of text, and an arbitrary severity number.
	This can be used by scripts to post generic alarms to other things.
	Currently nothing uses this, eventually the web interface will be
	made aware of it.

	gtk-insteonedit is a tool to allow link editing of insteon devices
	directly.  It is still partially complete.

	gnhastweb is a full fledged web GUI for gnhast.  It allows basic
	editing of devices, and placing devices into groups.  However, what
	it is actually designed for, is to give you a tablet/phone based
	control panel for your house.  Each device is a small "card" on the UI,
	and you can interact with them.  They are dynamically updated with the
	current status, and you can do things like flip switches on and off,
	adjust dimmers, etc.  It can also interface with your rrd files
	generated by rrdcoll to display simple graphs of sensor data.  The